cognizant Test/force-app/main/default/objects/Grant_Disbursed__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Grant Disburseds</relationshipLabel>
    <relationshipName>Grant_Disburseds</relationshipName>
    <type>Lookup</type>
</CustomField>