cognizant Test/force-app/main/default/objects/Grant_Disbursed__c/fields/Disbursed_Date__c.field-meta.xml
<CustomField>
    <fullName>Disbursed_Date__c</fullName>
    <label>Disbursed Date</label>
    <type>Date</type>
</CustomField>