cognizant Test/force-app/main/default/objects/Grant_Disbursed__c/fields/Grant_is_disbursed__c.field-meta.xml
<CustomField>
    <fullName>Grant_is_disbursed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grant is disbursed</label>
    <type>Checkbox</type>
</CustomField>